--- a/assets/css/style.index.css
+++ b/assets/css/style.index.css
@@ -94,3 +94,19 @@ h5 {
 .green{
     background-color: green;
 }
+.completbutton{
+    padding: 1rem;
+}
+.editbutton{
+    padding: 1rem;
+}
+.postContainner{
+    display: flex;
+}
+.removebutton{
+    padding: 1rem;
+}
+.postContainner p {
+    margin-right: 33rem;
+    margin-top: 1rem;
+}
